# src/aggregates/ContactNumberSetting/types/ContactNumberSettingCommandEnum.ts
@@ -2,4 +2,5 @@ export enum ContactNumberSettingCommandEnum {
   ADD_CONTACT_NUMBER_TYPE = 'addContactNumberType',
   UPDATE_CONTACT_NUMBER_TYPE = 'updateContactNumberType',
   ENABLE_CONTACT_NUMBER_TYPE = 'enableContactNumberType',
+  DISABLE_CONTACT_NUMBER_TYPE = 'disableContactNumberType'
 }
