# src/controllers/ContactNumberType.ts
@@ -2,9 +2,12 @@ import {ServerResponse} from 'http';
 import {get, isEmpty} from 'lodash';
 import {SwaggerRequestInterface} from 'SwaggerRequestInterface';
 import {ContactNumberSettingCommandEnum} from '../aggregates/ContactNumberSetting/types';
-import {AddContactNumberTypeCommandInterface} from '../aggregates/ContactNumberSetting/types/CommandTypes';
-import {UpdateContactNumberTypeCommandInterface} from '../aggregates/ContactNumberSetting/types/CommandTypes/UpdateContactNumberTypeCommandInterface';
-import {EnableContactNumberTypeCommandInterface} from '../aggregates/ContactNumberSetting/types/CommandTypes/EnableContactNumberTypeCommandInterface';
+import {
+  AddContactNumberTypeCommandInterface,
+  UpdateContactNumberTypeCommandInterface,
+  EnableContactNumberTypeCommandInterface,
+  DisableContactNumberTypeCommandInterface
+} from '../aggregates/ContactNumberSetting/types/CommandTypes';
 import {ContactNumberSettingCommandBusFactory} from '../factories/ContactNumberSettingCommandBusFactory';
 import {Types} from 'mongoose';
 import {ValidationError, ResourceNotFoundError} from 'a24-node-error-utils';
@@ -145,6 +148,42 @@ export const enableContactNumberType = async (
   } catch (error) {
     if (!(error instanceof ResourceNotFoundError)) {
       req.Logger.error('Unknown error in enable contact number type', error);
+    }
+    return next(error);
+  }
+};
+
+/**
+ * Disable Contact Number Type
+ *
+ * @param req - The http request object
+ * @param res - The http response object
+ * @param next - Function used to pass control to the next middleware
+ */
+export const disableContactNumberType = async (
+  req: SwaggerRequestInterface,
+  res: ServerResponse,
+  next: (error?: Error) => void
+): Promise<void> => {
+  try {
+    const swaggerParams = req.swagger.params || {};
+    const contactNumberTypeId = get(swaggerParams, 'contact_number_type_id.value');
+    const eventRepository = req.eventRepository;
+    const commandBus = ContactNumberSettingCommandBusFactory.getCommandBus(eventRepository);
+
+    const command = {
+      type: ContactNumberSettingCommandEnum.DISABLE_CONTACT_NUMBER_TYPE,
+      data: {
+        _id: contactNumberTypeId
+      }
+    } as DisableContactNumberTypeCommandInterface;
+
+    await commandBus.execute(command);
+    res.statusCode = 202;
+    res.end();
+  } catch (error) {
+    if (!(error instanceof ResourceNotFoundError)) {
+      req.Logger.error('Unknown error in disable contact number type', error);
     }
     return next(error);
   }
